fix: high contrast disabled state

--- a/src/components/sbb-file-selector/sbb-file-selector.scss
+++ b/src/components/sbb-file-selector/sbb-file-selector.scss
@@ -5,12 +5,22 @@
 @include sbb.host-component-properties;
 
 :host {
+  --sbb-file-selector-color: var(--sbb-color-black-default);
+  --sbb-file-selector-subtitle-color: var(--sbb-color-granite-default);
   --sbb-file-selector-background-color: var(--sbb-color-white-default);
   --sbb-file-selector-border-color: var(--sbb-color-cloud-default);
   --sbb-file-selector-transition-duration: var(--sbb-animation-duration-2x);
   --sbb-file-selector-transition-easing-function: var(--sbb-animation-easing);
 
   width: #{sbb.px-to-rem-build(320)};
+}
+
+:host([disabled]:not([disabled='false'])) {
+  @include sbb.if-forced-colors {
+    --sbb-file-selector-color: GrayText;
+    --sbb-file-selector-subtitle-color: GrayText;
+    --sbb-file-selector-border-color: GrayText;
+  }
 }
 
 :host([data-active]) {
@@ -42,16 +52,21 @@
   transition-property: background-color, border-color;
 }
 
+.sbb-file-selector__dropzone-area--icon {
+  color: var(--sbb-file-selector-color);
+}
+
 .sbb-file-selector__dropzone-area--title {
   @include sbb.text--bold;
 
+  color: var(--sbb-file-selector-color);
   margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
 .sbb-file-selector__dropzone-area--subtitle {
   @include sbb.text-xs--regular;
 
-  color: var(--sbb-color-granite-default);
+  color: var(--sbb-file-selector-subtitle-color);
   margin-block-end: var(--sbb-spacing-fixed-4x);
 }
 
